<resources>
    <string name="app_name">AttenSync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_report">Report</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_discussion">Discussion</string>
    <string name="menu_redeem">Redeem Store</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="distraction_warning">⚠️ You\'ve been distracted!</string>
    <string name="distraction_message">Your time is running low. Time to get back to work.</string>
    <string name="default_web_client_id">473923126511-m0lrdehfij7qu6cef76mplaebhkvhan3.apps.googleusercontent.com</string>
    <string name="nav_guest_name">Guest</string>
    <string name="nav_guest_email">Please log in</string>
    <string name="welcome_text">Welcome back !!\n</string>

    <string name="set_remider">Set Remider</string>
    <string name="reminder_interval_label">Reminder interval</string>
    <string name="monitor_apps_label">Monitor apps</string>
    <string name="apps_loading">Loading apps...</string>
    <string name="reminder_save">Save</string>
    <string name="reminder_cancel">Cancel</string>
    <string name="reminder_notification_title">AttenSync Reminder</string>
    <string name="reminder_notification_text">Attention Decreased, go back to work</string>
    <string name="notifications_title">Recent reminders</string>
    <string name="notifications_empty">No reminders yet.</string>
    <string name="usage_access_title">Allow usage access</string>
    <string name="usage_access_message">Enable Usage Access so AttenSync can detect distraction apps.</string>
    <string name="open_settings">Open settings</string>
    <string name="notification_permission_needed">Enable notifications to receive reminders.</string>

    <string name="discussion_default_topic">General</string>
    <string name="change_topic">Change topic</string>
    <string name="message_input_hint">Type a message</string>
    <string name="send_message">Send</string>

    <string name="select_topic">Select a topic</string>
    <string name="topic_cs">Computer Science</string>
    <string name="topic_ee">Electrical Engineering</string>
    <string name="topic_me">Mechanical Engineering</string>
    <string name="topic_bioengineering">Bioengineering</string>
    <string name="topic_physics">Physics</string>
    <string name="topic_chemistry">Chemistry</string>
    <string name="topic_chemical_engineering">Chemical Engineering</string>
    <string name="topic_materials_engineering">Materials Engineering</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="screen_time_title">Screen time today</string>
    <string name="screen_time_tap_to_view">Tap to view app times</string>
    <string name="screen_time_permission_needed">Usage access required. Tap to enable.</string>
    <string name="screen_time_no_monitored">No monitored apps selected</string>
    <string name="screen_time_no_usage">No usage recorded yet</string>
    <string name="screen_time_details_title">App screen time</string>
    <string name="screen_time_zero">0m</string>

    <string name="points_default">Points: 0</string>
    <string name="points_format">Points: %1$d</string>
    <string name="leaderboard_points_label">Your points</string>
    <string name="leaderboard_offline">Offline: showing cached results</string>
    <string name="leaderboard_not_updated">Not updated yet</string>
    <string name="leaderboard_empty">No leaderboard data yet</string>
    <string name="leaderboard_points_zero">0</string>

    <string name="reminder_selected_apps">Selected apps</string>
    <string name="reminder_selected_empty">No apps selected yet</string>
    <string name="reminder_other_apps">Other apps</string>
    <string name="reminder_other_empty">No other apps available</string>
    <string name="reminder_usage_format">Usage today: %1$s</string>
    <string name="reminder_usage_empty">No usage yet</string>
    <string name="reminder_limit_format">Limit: %1$s</string>
    <string name="reminder_time_picker_title">Set time for %1$s</string>
</resources>