<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/outline_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/outline_calendar_view_month_24"
            android:title="@string/menu_calender" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/discussion"
            android:title="@string/menu_discussion" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/bell"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/business_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/outline_leaderboard_24"
            android:title="@string/menu_leaderboard" />
        <item
            android:id="@+id/nav_redeem"
            android:icon="@drawable/outline_storefront_24"
            android:title="@string/menu_redeem" />


    </group>
</menu>