<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_topic"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:id="@+id/topic_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/topic_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_cs" />

        <RadioButton
            android:id="@+id/topic_ee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_ee" />

        <RadioButton
            android:id="@+id/topic_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_me" />

        <RadioButton
            android:id="@+id/topic_bioengineering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_bioengineering" />

        <RadioButton
            android:id="@+id/topic_physics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_physics" />

        <RadioButton
            android:id="@+id/topic_chemistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_chemistry" />

        <RadioButton
            android:id="@+id/topic_chemical_engineering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_chemical_engineering" />

        <RadioButton
            android:id="@+id/topic_materials_engineering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_materials_engineering" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ok_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
