<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.attensync.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_calender"
        android:name="com.example.attensync.ui.calender.CalenderFragment"
        android:label="@string/menu_calender"
        tools:layout="@layout/fragment_calender" />

    <fragment
        android:id="@+id/nav_discussion"
        android:name="com.example.attensync.ui.discussion.DiscussionFragment"
        android:label="@string/menu_discussion"
        tools:layout="@layout/fragment_discussion" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.attensync.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.attensync.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.example.attensync.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_redeem"
        android:name="com.example.attensync.ui.redeem.RedeemFragment"
        android:label="@string/menu_redeem"
        tools:layout="@layout/fragment_redeem" />
</navigation>